--- a/src/components/scrollytelling.module.css
+++ b/src/components/scrollytelling.module.css
@@ -1,27 +1,10 @@
-.navbar {
-  position: fixed;
-  display: flex;
-  top: 0;
-  right: 0;
-  z-index: 1;
-}
-.navbar > a {
-  display: block;
-  font-size: 20px;
-  padding: 20px;
-}
-.pageTitle {
-  text-align: center;
-  font-size: 30;
-  margin: 110px 0 10px;
-}
 .pageSubtitle {
   text-align: center;
   font-size: 24px;
   color: #888;
 }
 .graphicContainer {
-  padding: 0vh 2vw 70vh;
+  padding: 0vh 0vw 0vh 2vw;
   display: flex;
   justify-content: space-between;
 }
@@ -45,7 +28,7 @@
   color: #fff;
 }
 .scroller {
-  flex-basis: 35%;
+  flex-basis: 38%;
 }
 .step {
   margin: 0 auto 3rem auto;
