--- a/src/components/scrollytelling.module.css
+++ b/src/components/scrollytelling.module.css
@@ -1,46 +1,35 @@
-.pageSubtitle {
-  text-align: center;
-  font-size: 24px;
-  color: #888;
-}
 .graphicContainer {
-  padding: 0vh 0vw 0vh 2vw;
-  display: flex;
+  padding: 0;
   justify-content: space-between;
 }
 .graphic {
-  flex-basis: 60%;
   position: sticky;
   width: 100%;
   height: 100vh;
   top: 0vh;
-  background-color: #aaa;
-  display: flex;
   align-items: center;
   justify-content: center;
-  background-size: cover;
-  background-position: center center;
+  overflow: hidden;
+  z-index: -1;
 }
-.graphic > p {
-  font-size: 5rem;
-  font-weight: 700;
-  text-align: center;
-  color: #fff;
+.graphic > img {
+  flex: 1;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 .scroller {
-  flex-basis: 38%;
+  margin: auto;
 }
 .step {
-  margin: 0 auto 3rem auto;
-  padding: 720px 0;
-  border: 1px solid #333;
+  margin: 60vh auto;
+  padding: 20rem 3rem;
+  /* border: 1px solid #fff; */
 }
-.step > p {
-  text-align: center;
-  padding: 1rem;
-  font-size: 1.8rem;
-  margin: 0;
+.step:first-child {
+  margin-top: -80vh;
 }
 .step:last-child {
+  padding-bottom: 120vh;
   margin-bottom: 0;
 }
