--- a/src/components/scrollytelling.module.css
+++ b/src/components/scrollytelling.module.css
@@ -1,35 +1,23 @@
-.graphicContainer {
-  padding: 0;
-  justify-content: space-between;
-}
 .graphic {
   position: sticky;
   width: 100%;
-  height: 100vh;
-  top: 0vh;
-  align-items: center;
-  justify-content: center;
-  overflow: hidden;
+  min-height: 100vh;
+  top: 0;
   z-index: -1;
+  padding: 0;
+  margin: 0;
 }
-.graphic > img {
+.graphic > div {
+  overflow: visible !important;
+}
+.graphic img {
   flex: 1;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  min-height: 100vh;
   object-fit: cover;
 }
-.scroller {
-  margin: auto;
-}
-.step {
-  margin: 60vh auto;
-  padding: 20rem 3rem;
+.content {
+  margin: -50vw auto 0;
+  padding: 10vw 3rem 50vw;
   /* border: 1px solid #fff; */
-}
-.step:first-child {
-  margin-top: -80vh;
-}
-.step:last-child {
-  padding-bottom: 120vh;
-  margin-bottom: 0;
 }
